# backend/api/oas_request_encoders_gen.go
@@ -111,20 +111,6 @@ func encodePostsPostIDPutRequest(
 	return nil
 }
 
-func encodeUsersPostRequest(
-	req *UserRequest,
-	r *http.Request,
-) error {
-	const contentType = "application/json"
-	e := new(jx.Encoder)
-	{
-		req.Encode(e)
-	}
-	encoded := e.Bytes()
-	ht.SetBody(r, bytes.NewReader(encoded), contentType)
-	return nil
-}
-
 func encodeUsersUserIDIconPostRequest(
 	req OptUsersUserIDIconPostReq,
 	r *http.Request,
